kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brutto-netto-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brutto-netto
  template:
    metadata:
      labels:
        app: brutto-netto
    spec:
      containers:
      - name: brutto-netto
        image: oydeu/app-brutto_netto:latest
        ports:
        - containerPort: 3000
