kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: brutto-netto-service
spec:
  selector:
    app: brutto-netto
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
