kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: brutto-netto-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - brutto.data-container.net
    secretName: letsencrypt-brutto
  rules:
  - host: brutto.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName:brutto-netto-service
          servicePort: 80
